cleanup of code no longer needed and extra spaces

--- a/style.css
+++ b/style.css
@@ -49,17 +49,12 @@ body {
 
 #top img {
     display: block;
-    float: left;
-    
+    float: left;   
 }
 
 #top #doodle {
     width: 425px;
     margin: 0 auto;
-}
-
-#top #vanilla {
-    position: relative;
 }
 
 #middle {
@@ -74,8 +69,7 @@ body {
     border: 1px solid rgb(223,225,229);
     border-radius: 25px;
     margin-left: auto;
-    margin-right: auto;
-    
+    margin-right: auto;   
 }
 
 input {
